[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/game_over_ui.gd" id="1_v8k5x"]
[ext_resource type="FontFile" uid="uid://c8j7y3r2j1q0w" path="res://assets/ui/pixel_font.ttf" id="2_8j3m9"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.08, 0.08, 0.1, 0.95)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.3, 0.25, 0.15, 1.0)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_left = 8
corner_radius_bottom_right = 8

[node name="GameOverUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1_v8k5x")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="SkullIcon" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 20.0
offset_right = 32.0
offset_bottom = 84.0
grow_horizontal = 2
expand_mode = 1
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 90.0
offset_right = 100.0
offset_bottom = 130.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_8j3m9")
theme_override_font_sizes/font_size = 32
text = "DEFEATED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewRecordLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 135.0
offset_right = 80.0
offset_bottom = 160.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_8j3m9")
theme_override_font_sizes/font_size = 16
text = "★ NEW RECORD! ★"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -80.0
offset_right = 180.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -210.0
offset_top = -70.0
offset_right = 210.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="TryAgainBtn" type="Button" parent="Panel/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_8j3m9")
theme_override_font_sizes/font_size = 12
text = "TRY AGAIN"

[node name="MainMenuBtn" type="Button" parent="Panel/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_8j3m9")
theme_override_font_sizes/font_size = 12
text = "MAIN MENU"

[node name="StatsBtn" type="Button" parent="Panel/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_8j3m9")
theme_override_font_sizes/font_size = 12
text = "STATS"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
